# SSL-3D-Sim

./: README.md
install/: local_setup.sh  setup.sh
install/ssl_robot/share/ament_index/resource_index/package_run_dependencies/: ssl_robot
install/ssl_robot/share/ament_index/resource_index/parent_prefix_path/: ssl_robot
install/ssl_robot/share/ssl_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh
install/ssl_robot/share/ssl_robot/cmake/: ssl_robotConfig-version.cmake  ssl_robotConfig.cmake
install/ssl_robot/share/ssl_robot/environment/: ament_prefix_path.dsv  path.dsv
install/ssl_robot/share/ssl_robot/launch/: simulation.launch.py
install/ssl_robot/share/ssl_robot/meshes/: base_link.STL  link_BL.STL  link_FR.STL
install/ssl_robot/share/ssl_robot/worlds/: ssl_field.world
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ssl_robot/lib/ssl_robot/: gui_controller.py
ros2_ws/install/ssl_robot/share/ssl_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/ssl_robot/share/ssl_robot/cmake/: ssl_robotConfig-version.cmake  ssl_robotConfig.cmake
ros2_ws/install/ssl_robot/share/ssl_robot/meshes/: link_BL.STL  (+4 more)
ros2_ws/log/: latest_build
ros2_ws/src/ssl_robot/: CMakeLists.txt  package.xml
ros2_ws/src/ssl_robot/launch/: simulation.launch.py
ros2_ws/src/ssl_robot/src/: gui_controller.py
ros2_ws/src/ssl_robot/urdf/: robot.urdf
ros2_ws/src/ssl_robot/worlds/: ssl_field.world
(+7 files in other folders)
